--- a/LiveOnes/App.xaml
+++ b/LiveOnes/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="LiveOnes.App"
+﻿<Application x:Class="LiveOnes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:LiveOnes"
